# pkgreuse

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: benchmark_report.md  local_maximized_resolution.md  module_inventory.md
scripts/: check-release.ps1  smoke-release.py
src/pkgreuse/: __init__.py  cli.py  dependencies.py  index.py  inventory.py  ports.py  resolver.py  scanner.py  transfer.py
src/pkgreuse/application/: __init__.py  indexing.py  installation.py  installers.py  queries.py
src/pkgreuse/domain/: __init__.py  errors.py  models.py  names.py  requirements.py
src/pkgreuse/infrastructure/: __init__.py  backends.py  index_repository.py
tests/: conftest.py  test_application_indexing.py  test_application_installation.py  test_application_queries.py  test_backends.py  test_cli_characterization.py  test_domain.py  test_index_repository.py  test_resolver_local_max.py  test_reuse_end_to_end.py  test_scanner.py  test_transfer_policy.py
tests/extended/: test_numpy_manual.py
