[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pkgreuse"
version = "0.1.1"
description = "Reuse installed Python packages from existing virtual environments."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "khalil" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["pip", "uv", "virtualenv", "package-cache", "windows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = [
    "packaging>=24.0",
]

[project.urls]
Homepage = "https://github.com/khalilurehman-masood/pkgreuse"
Documentation = "https://github.com/khalilurehman-masood/pkgreuse#readme"
Issues = "https://github.com/khalilurehman-masood/pkgreuse/issues"
Source = "https://github.com/khalilurehman-masood/pkgreuse"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "twine>=6.0",
]

[project.scripts]
pkgreuse = "pkgreuse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pkgreuse = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
    "extended: manual or environment-dependent package reuse tests",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
packages = ["pkgreuse"]
strict = true
warn_unused_ignores = true

[tool.coverage.run]
branch = true
source = ["pkgreuse"]

[tool.coverage.report]
fail_under = 52
show_missing = true
